// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderSelection matches snapshot when no quotes are available 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="0"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        data={
                          [
                            {
                              "provider": {
                                "description": "Test provider",
                                "environmentType": "PRODUCTION",
                                "hqAddress": "Test Address",
                                "id": "/providers/transak",
                                "links": [Array],
                                "logos": [Object],
                                "name": "Transak",
                              },
                              "type": "provider",
                            },
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        keyboardDismissMode="none"
                        keyboardShouldPersistTaps="always"
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityRole="button"
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ProviderSelection matches snapshot when quotes are loading 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="1"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 4,
                            "opacity": 0.5,
                            "position": "relative",
                          }
                        }
                      >
                        <View
                          accessibilityRole="none"
                          accessible={true}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                            <View
                              accessible={false}
                              style={[Object]}
                              testID="listitem-gap"
                            />
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 4,
                            "opacity": 0.5,
                            "position": "relative",
                          }
                        }
                      >
                        <View
                          accessibilityRole="none"
                          accessible={true}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                            <View
                              accessible={false}
                              style={[Object]}
                              testID="listitem-gap"
                            />
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 4,
                            "opacity": 0.5,
                            "position": "relative",
                          }
                        }
                      >
                        <View
                          accessibilityRole="none"
                          accessible={true}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                            <View
                              accessible={false}
                              style={[Object]}
                              testID="listitem-gap"
                            />
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 4,
                            "opacity": 0.5,
                            "position": "relative",
                          }
                        }
                      >
                        <View
                          accessibilityRole="none"
                          accessible={true}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                            <View
                              accessible={false}
                              style={[Object]}
                              testID="listitem-gap"
                            />
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": true,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 4,
                            "opacity": 0.5,
                            "position": "relative",
                          }
                        }
                      >
                        <View
                          accessibilityRole="none"
                          accessible={true}
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                            <View
                              accessible={false}
                              style={[Object]}
                              testID="listitem-gap"
                            />
                            <View
                              style={[Object]}
                              testID="listitemcolumn"
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ProviderSelection matches snapshot when quotes fail to load 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="3"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <View
                        style={
                          [
                            {
                              "display": "flex",
                              "paddingLeft": 16,
                              "paddingRight": 16,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            {
                              "backgroundColor": "#ca35421a",
                              "borderColor": "#ca3542",
                              "borderLeftWidth": 4,
                              "borderRadius": 4,
                              "flexDirection": "row",
                              "padding": 12,
                              "paddingLeft": 8,
                            }
                          }
                          testID="banneralert"
                        >
                          <View
                            style={
                              {
                                "marginRight": 8,
                              }
                            }
                          >
                            <SvgMock
                              color="#ca3542"
                              fill="currentColor"
                              height={24}
                              name="Danger"
                              style={[Object]}
                              width={24}
                            />
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Object]}
                            >
                              Failed to load quotes
                            </Text>
                          </View>
                        </View>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        data={
                          [
                            {
                              "provider": {
                                "description": "Test provider",
                                "environmentType": "PRODUCTION",
                                "hqAddress": "Test Address",
                                "id": "/providers/transak",
                                "links": [Array],
                                "logos": [Object],
                                "name": "Transak",
                              },
                              "type": "provider",
                            },
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        keyboardDismissMode="none"
                        keyboardShouldPersistTaps="always"
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityRole="button"
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ProviderSelection renders providers directly when quotes load but none are available 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                ProviderSelection
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexBasis": "0%",
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "minHeight": 0,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "gap": 16,
                              "minHeight": 56,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                            },
                            false,
                            undefined,
                          ]
                        }
                        testID="header"
                      >
                        <View>
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              collapsable={false}
                              jestAnimatedProps={[Object]}
                              jestAnimatedStyle={[Object]}
                              jestInlineStyle={[Array]}
                              nativeID="5"
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                                "flexBasis": "0%",
                                "flexGrow": 1,
                                "flexShrink": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Array]}
                            >
                              Providers
                            </Text>
                          </View>
                        </View>
                        <View>
                          <View
                            onLayout={[Function]}
                          />
                        </View>
                      </View>
                      <RCTScrollView
                        collapsable={false}
                        data={
                          [
                            {
                              "provider": {
                                "description": "Test provider",
                                "environmentType": "PRODUCTION",
                                "hqAddress": "Test Address",
                                "id": "/providers/transak",
                                "links": [Array],
                                "logos": [Object],
                                "name": "Transak",
                              },
                              "type": "provider",
                            },
                          ]
                        }
                        getItem={[Function]}
                        getItemCount={[Function]}
                        handlerTag={-1}
                        handlerType="NativeViewGestureHandler"
                        keyExtractor={[Function]}
                        keyboardDismissMode="none"
                        keyboardShouldPersistTaps="always"
                        onContentSizeChange={[Function]}
                        onGestureHandlerEvent={[Function]}
                        onGestureHandlerStateChange={[Function]}
                        onLayout={[Function]}
                        onMomentumScrollBegin={[Function]}
                        onMomentumScrollEnd={[Function]}
                        onScroll={[Function]}
                        onScrollBeginDrag={[Function]}
                        onScrollEndDrag={[Function]}
                        removeClippedSubviews={false}
                        renderItem={[Function]}
                        renderScrollComponent={[Function]}
                        scrollEventThrottle={0.0001}
                        stickyHeaderIndices={[]}
                        style={
                          {
                            "flex": 1,
                            "minHeight": 0,
                          }
                        }
                        viewabilityConfigCallbackPairs={[]}
                      >
                        <View>
                          <View
                            onFocusCapture={[Function]}
                            onLayout={[Function]}
                            style={null}
                          >
                            <View
                              accessibilityRole="button"
                              accessibilityState={[Object]}
                              accessibilityValue={[Object]}
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={[Object]}
                            >
                              <View … />
                              <View … />
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
